--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,10 @@ body {
   font-family: "Zilla Slab", serif;
 }
 
+h3{
+  margin-bottom: 10px;
+}
+
 .box-container {
   width: 70%;
   margin: 0 auto;
@@ -144,15 +148,18 @@ button {
 #histories {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  padding-left: 30px;
+  /* justify-content: space-around; */
 }
 
 .card {
-  width: 100%;
+  width: 32%;
   height: 100%;
   padding: 50px;
+  margin: 5px;
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  justify-content: space-between; 
   align-items: center;
   padding: 20px 30px;
   color: white;
@@ -187,6 +194,7 @@ button {
     width: 100%;
   }
   .card {
+    width: 100%;
     flex-direction: column;
   }
 }
